Fix: aligns sorting arrow to the base of the column heading
This makes the sorting arrows display uniformally at the base of the column heading,

Removed existing styling, changed parent SPAN a block element DIV and applied new style to the DIV to position the enclosed arrow icon to the right of the column, just above the base line

--- a/app/assets/stylesheets/components/tables.scss
+++ b/app/assets/stylesheets/components/tables.scss
@@ -235,13 +235,6 @@ table {
       cursor: pointer;
     }
 
-    .arrow-down,
-    .arrow-up {
-      position: absolute;
-      right: 4px;
-      top: 3px;
-    }
-
     a {
       color: $blue !important;
       position: relative;
@@ -262,4 +255,11 @@ table {
 
 .table-top {
   margin-bottom: 20px;
+}
+
+.sort-arrow {
+  float: right;
+  position: absolute;
+  right: 0;
+  bottom: 7px;
 }
